--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "react": "^17.0.1",
+    "react-animated-weather": "^4.0.1",
     "react-dom": "^17.0.1",
+    "react-loader-spinner": "^4.0.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
   },
